# assethook

./: .gitignore  AUTHORS  LICENSE  README.md
capi/: Cargo.toml  hook.sh  install.sh
capi/src/: lib.rs
cppapi/: .gitignore  Cargo.toml  build.rs  build.sh  hook.sh  install.sh  notes.txt
cppapi/src/: asset.rs  externs.rs  fakeasset.rs  hooks_pre.rs  lib.rs  macros.rs
