[package]
name = "assethook-cppapi"
version = "1.0.0"
authors = ["Jeff Dileo"]
build = "build.rs"

[lib]
name = "assethook_cppapi"
crate-type = ["dylib"]

[build-dependencies]
regex = "0.1"

[dependencies]
#interpolate_idents = "0.1.3"
libc = "0.2"
regex = "0.1"
lazy_static = "0.1.*"
libloading = "0.3"
memmap = "0.5.0"

